--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,9 @@
     "src/**/*.tsx",
     "src/**/*.vue",
     "tests/**/*.ts",
-    "tests/**/*.tsx"
+    "tests/**/*.tsx",
+    "src/shims-vue.d.ts",
+    "src/shims-vuex.d.ts"
   ],
   "exclude": [
     "node_modules"
